# NIDAR

./: .clang-format  CMakeLists.txt  README.md  script.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
source/: conf.py  index.rst
src/: main.c  main.cpp
